--- a/prologin/problems/templates/problems/problem.html
+++ b/prologin/problems/templates/problems/problem.html
@@ -73,8 +73,8 @@
         <h2>{% trans "Submit your solution" %}</h2>
         {% if request.user.is_authenticated %}
           {% if user_submission.succeeded %}
-            <p class="alert alert-success"><i class="fa fa-check"></i>
-              {% blocktrans with score=user_submission.score base=user_submission.score_base malus=user_submission.malus %}You already solved this problem. You won <strong>{{ score }}</strong> points for it, which is {{ base }} base points minus {{ malus }} malus points.{% endblocktrans %}</p>
+            <div class="alert alert-success"><i class="fa fa-check"></i>
+              <div>{% blocktrans with score=user_submission.score base=user_submission.score_base malus=user_submission.malus %}You already solved this problem. You won <strong>{{ score }}</strong> points for it, which is {{ base }} base points minus {{ malus }} malus points.{% endblocktrans %}</div></div>
           {% endif %}
 
           <div class="panel panel-default">
