--- a/prologin/prologin/templates/prologin/main-menu.html
+++ b/prologin/prologin/templates/prologin/main-menu.html
@@ -3,7 +3,7 @@
   <li class="{% active '^/contest/' %}"><a href="{% url 'contest:qualification_summary' request.current_edition.year %}">{% trans "Participate" %}</a></li>
   <li class="{% active '^/about/' %}"><a href="{% url 'pages:about-contest' %}">{% trans "Discover" %}</a></li>
   <li class="{% active '^/train/' %}"><a href="{% url 'training:index' %}">{% trans "Train" %}</a></li>
-  <li class="{% active '^forum/' %}"><a href="{% url 'forum:index' %}">{% trans "Forums" %}</a></li>
+  <li class="{% active '^/forum/' %}"><a href="{% url 'forum:index' %}">{% trans "Forums" %}</a></li>
     {% comment TODO %}
   <li><a href="{% active '^/archives/' %}">{% trans "Archives" %}</a></li>
     {% endcomment %}
