forum: placeholders in new thread form; staff flare

--- a/prologin/forum/static/css/forum.css
+++ b/prologin/forum/static/css/forum.css
@@ -185,6 +185,16 @@
 	opacity: 1;
 }
 
+.staff-flare {
+	display: inline-block;
+	font-size: 0.8em;
+	margin: 10px 0 0;
+}
+
+.staff-flare > i.fa {
+	color: goldenrod;
+}
+
 @media (min-width: 768px) {
 
 	.post-author {
