--- a/prologin/prologin/static/css/prologin.css
+++ b/prologin/prologin/static/css/prologin.css
@@ -356,7 +356,6 @@ footer .legal {
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
 }
 
-
 /*
  * Code (pygments)
  */
@@ -374,7 +373,6 @@ footer .legal {
   border-radius: 0;
   margin: 0;
 }
-
 
 /*
  * News
@@ -429,13 +427,17 @@ footer .legal {
 }
 
 .empty-table-row {
-	background-color: #f5f5f5;
-	padding: 1em;
+  background-color: #f5f5f5;
+  padding: 1em;
 }
 
 .sponsor {
   width: 100%;
   max-width: 220px;
+}
+
+.prologin-winner > i.fa {
+  color: goldenrod;
 }
 
 @media (min-width: 768px) {
@@ -445,7 +447,7 @@ footer .legal {
 }
 
 .pagination-narrow .pagination {
-	margin: 0 0 10px;
+  margin: 0 0 10px;
 }
 
 .avatar.avatar-full {
@@ -488,6 +490,7 @@ footer .legal {
 .bgcont.bgcont-title {
   min-height: 12em;
 }
+
 .bgcont.bgcont-title:after {
   background: transparent linear-gradient(to bottom, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0) 50%);
 }
@@ -496,6 +499,7 @@ footer .legal {
   color: white;
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.8);
 }
+
 .presentation-body a:not(.btn) {
   color: #78c2fa;
 }
@@ -526,6 +530,7 @@ footer .legal {
   border: 1px solid #4155c0;
   position: relative;
 }
+
 .challenge-group .challenge-year {
   background: #4155c0;
   position: absolute;
@@ -545,6 +550,7 @@ footer .legal {
   margin: 0 0 0 80px;
   padding: 0;
 }
+
 .challenge-event-list li a {
   display: block;
   padding: 0.4em 1em;
@@ -552,13 +558,16 @@ footer .legal {
   text-decoration: none;
   color: #4155c0;
 }
+
 .challenge-event-list li a:hover .text-muted {
   color: white;
 }
+
 .challenge-event-list li a:hover, .challenge-event-list li a:active {
   color: white;
   background-color: #4155c0;
 }
+
 .challenge-event-list li:last-child a {
   border-bottom: none;
 }
@@ -581,9 +590,14 @@ footer .legal {
 }
 
 @keyframes staff-flair-president {
-  0% { left: -100%; }
-  100% { left: 200%; }
+  0% {
+    left: -100%;
+  }
+  100% {
+    left: 200%;
+  }
 }
+
 .staff-flair-president {
   position: relative;
   overflow: hidden;
@@ -612,12 +626,14 @@ footer .legal {
   box-sizing: content-box;
   margin: -15px;
 }
+
 .submission-history-inner {
   margin: 0;
   padding: 0;
   list-style: none;
   white-space: nowrap;
 }
+
 .submission-history li {
   position: relative;
   margin: 0;
@@ -629,9 +645,11 @@ footer .legal {
   overflow: hidden;
   z-index: 0;
 }
+
 .submission-history li:hover {
   background: #efefef;
 }
+
 .submission-history li .side {
   width: 24px;
   position: absolute;
@@ -644,21 +662,27 @@ footer .legal {
   background-color: #444444;
   z-index: -1;
 }
+
 .submission-history li.succeeded .side {
   background-color: #5cb85c; /* success color */
 }
+
 .submission-history li.succeeded:hover .side, .submission-history li.succeeded:hover .pts-won {
   background-color: #4d994d; /* success color */
 }
+
 .submission-history li.failed .side {
   background-color: #d9534f; /* danger color */
 }
+
 .submission-history li.failed:hover .side {
   background-color: #ba4745; /* danger color */
 }
+
 .submission-history li.succeeded small {
   margin-left: -2em;
 }
+
 .submission-history li .pts-won {
   font-size: 90%;
 }
@@ -673,24 +697,31 @@ footer .legal {
   font-size: 14px;
   line-height: 1.42857143;
 }
+
 .select2-dropdown {
   border: 1px solid #ccc !important;
 }
+
 .select2-container--open .select2-dropdown--below {
   border-top: none !important;
 }
+
 .select2-container--open .select2-dropdown--above {
   border-bottom: none !important;
 }
+
 .select2-container .select2-selection--single .select2-selection__rendered {
   padding: 0 10px 0 0 !important; /* clear button */
 }
+
 .select2-container--default .select2-selection--single .select2-selection__rendered {
   line-height: inherit !important;
 }
+
 .select2-container--default .select2-selection--single .select2-selection__arrow {
   height: 34px !important;
 }
+
 .select2-container--default .select2-selection--single .select2-selection__arrow b {
   border-color: black transparent transparent transparent !important; /* down arrow color */
 }
