--- a/prologin/problems/templates/problems/challenge-scoreboard.html
+++ b/prologin/problems/templates/problems/challenge-scoreboard.html
@@ -22,17 +22,22 @@
           <thead>
             <tr>
               <th>{% trans "Rank" %}</th>
+              <th></th>
               <th>{% trans "Name" %}</th>
               <th>{% trans "Points" %}</th>
             </tr>
           </thead>
           <tbody>
-          {% for contestant_score in contestant_scores %}
+          {% for line in contestant_scores %}
             <tr>
-              <td>{{ forloop.counter }}</td>
-              <td><a href="{% url 'users:profile' contestant_score.user_id %}">
-                  {{ contestant_score.user__username }}</a></td>
-              <td>{{ contestant_score.total_score }}</td>
+              <td>{{ line.rank }}</td>
+              <td>{% if line.rank <= 3 %}
+                <span class="challenge-trophy-{{ line.rank }}">
+                <i class="fa fa-trophy"></i></span>
+                {% endif %}</td>
+              <td><a href="{% url 'users:profile' line.user_id %}">
+                  {{ line.user__username }}</a></td>
+              <td>{{ line.total_score }}</td>
             </tr>
           {% empty %}
             <tr>
