--- a/prologin/problems/templates/problems/challenge-scoreboard.html
+++ b/prologin/problems/templates/problems/challenge-scoreboard.html
@@ -21,8 +21,8 @@
         <table class="table table-striped">
           <thead>
             <tr>
-              <th>{% trans "Rank" %}</th>
               <th></th>
+              <th>{% trans "Rank" %}</th>
               <th>{% trans "Name" %}</th>
               <th>{% trans "Points" %}</th>
             </tr>
@@ -30,11 +30,12 @@
           <tbody>
           {% for line in contestant_scores %}
             <tr>
-              <td>{{ line.rank }}</td>
               <td>{% if line.rank <= 3 %}
                 <span class="challenge-trophy-{{ line.rank }}">
                 <i class="fa fa-trophy"></i></span>
                 {% endif %}</td>
+              <td><strong>{{ line.rank }}</strong>
+                {% if line.ex_aequo %}<small>{% trans "(ex-aequo)" %}</small>{% endif %}</td>
               <td><a href="{% url 'users:profile' line.user_id %}">
                   {{ line.user__username }}</a></td>
               <td>{{ line.total_score }}</td>
