--- a/prologin/problems/templates/problems/challenge-scoreboard.html
+++ b/prologin/problems/templates/problems/challenge-scoreboard.html
@@ -21,7 +21,7 @@
         <table class="table table-striped">
           <thead>
             <tr>
-              <th></th>
+              <th width="2em"></th>
               <th>{% trans "Rank" %}</th>
               <th>{% trans "Name" %}</th>
               <th>{% trans "Points" %}</th>
@@ -30,7 +30,7 @@
           <tbody>
           {% for line in contestant_scores %}
             <tr>
-              <td>{% if line.rank <= 3 %}
+              <td class="text-center">{% if line.rank <= 3 %}
                 <span class="challenge-trophy-{{ line.rank }}">
                 <i class="fa fa-trophy"></i></span>
                 {% endif %}</td>
