centers: translate "Show"

--- a/prologin/centers/templates/centers/map.html
+++ b/prologin/centers/templates/centers/map.html
@@ -70,7 +70,7 @@
                         <td>
                             <a href="#center-{{ forloop.counter0 }}"
                                onclick="javascript:google.maps.event.trigger(center_markers[{{ forloop.counter0 }}], 'click');">
-                                <i class="fa fa-map-marker"></i> Show</a>
+                                <i class="fa fa-map-marker"></i> {% trans "Show" %}</a>
                         </td>
                         {% localize off %}
                         <td>
