--- a/prologin/prologin/templates/prologin/messages.html
+++ b/prologin/prologin/templates/prologin/messages.html
@@ -18,7 +18,7 @@
   <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
   <i class="fa fa-info-circle"></i>
 {% endif %}
-  <div>{{ message }}</div>
+  <div>{{ message|safe }}</div>
 </div>
 
 {% endfor %}
