--- a/prologin/centers/templates/centers/map.html
+++ b/prologin/centers/templates/centers/map.html
@@ -56,7 +56,7 @@
             <div id="map-canvas" style="width: 100%; min-height: 400px; background: #444;"></div>
         </div>
         <div class="col-sm-6">
-            <table class="table table-striped">
+            <table class="table table-striped" style="white-space: nowrap;">
                 <thead>
                     <tr><th>{% trans "Center address" %}</th><th>{% trans "Show" %}</th><th>{% trans "Full map" %}</th></tr>
                 </thead>
