--- a/prologin/prologin/templates/prologin/favicons.html
+++ b/prologin/prologin/templates/prologin/favicons.html
@@ -13,6 +13,7 @@
 <link rel="icon" type="image/png" href="{% static 'img/favicon-96.png' %}" sizes="96x96">
 <link rel="icon" type="image/png" href="{% static 'img/favicon-194.png' %}" sizes="194x194">
 <link rel="shortcut icon" href="{% static 'img/favicon.ico' %}">
+<link rel="manifest" href="manifest.json">
 <meta name="apple-mobile-web-app-title" content="Prologin">
 <meta name="application-name" content="Prologin">
 <meta name="msapplication-TileColor" content="#35479a">
