mailing: fix from address and template path

--- a/prologin/mailing/templates/mailing/start_contest.body.text.html
+++ b/prologin/mailing/templates/mailing/start_contest.body.text.html
@@ -4,7 +4,7 @@ Bonjour,
 Nous t’annonçons que l'édition 2016 du Concours National d'Informatique,
 organisé par Prologin, est lancée !
 Pour rappel, ce concours entièrement gratuit est ouvert aux jeunes nés en 1995
-et aprèsde vingt ans et moins et est entièrement gratuit.
+et après.
 
 Cette année est chargée de nouveautés, parmis lesquelles :
 
