mailing: fix start_context template

--- a/prologin/mailing/templates/mailing/start_contest.body.text.html
+++ b/prologin/mailing/templates/mailing/start_contest.body.text.html
@@ -6,14 +6,6 @@ organisé par Prologin, est lancée !
 Pour rappel, ce concours entièrement gratuit est ouvert aux jeunes nés en 1995
 et après.
 
-Cette année est chargée de nouveautés, parmis lesquelles :
-
-- Un site web entièrement réécrit, il est maintenant plus beau, plus simple à
-utiliser et contient plus plus de fonctionnalités.
-- Un nouveau format pour le questionnaire de sélection prenant en compte les
-réflexions que vous nous avez faites les années précédentes.
-- Des exercices d’algorithmique agrémentés de schémas.
-
 Nous t'invitons donc à te rendre sur notre site Internet. Tu y découvriras
 le questionnaire de sélection qu'il te faudra remplir afin te qualifier
 en épreuve régionale. Pour y accéder, rends-toi à l'adresse suivante :
@@ -22,12 +14,16 @@ https://prologin.org/contest/2016/qualification
 
 Il te sera possible de modifier tes réponses jusqu'au 3 janvier 2016 à 23h42.
 
+Cette année est pleine de nouveautés, parmi lesquelles un nouveau site web,
+et un nouveau format pour le questionnaire de sélection prenant en compte les
+réflexions que vous nous avez faites les années précédentes.
+
 Tu trouveras également de plus amples informations sur le concours à l'adresse
 suivante :
 
 https://prologin.org/about/contest
 
-Les dates définitives des épreuves régionales sont :
+Les dates des épreuves régionales sont les suivantes :
 
 * EPITA – 31 jan 2016
 * ISEG Lyon – 06 fév 2016
