mailing: improve start_context template

--- a/prologin/mailing/templates/mailing/start_contest.body.text.html
+++ b/prologin/mailing/templates/mailing/start_contest.body.text.html
@@ -1,5 +1,5 @@
 {% spaceless %}{% autoescape off %}
-Bonjour,
+Bonjour {{ user.first_name }} !
 
 Nous t’annonçons que l'édition 2016 du Concours National d'Informatique,
 organisé par Prologin, est lancée !
@@ -37,6 +37,9 @@ Les dates des épreuves régionales sont les suivantes :
 * ISEN Toulon – 27 fév 2016
 * ISEG Lyon – 05 mar 2016
 * École Polytechnique – 12 mar 2016
+
+Si tu n'as plus l'âge de participer, nous serions ravis que tu fasses passer le
+message à tous les jeunes susceptibles d'être intéressés !
 
 En espérant te compter parmi les candidats de cette vingt-quatrième édition,
 
