--- a/prologin/forum/templates/forum/create_thread.html
+++ b/prologin/forum/templates/forum/create_thread.html
@@ -1,25 +1,37 @@
 {% extends "forum/base.html" %}
-{% load i18n bootstrap django_bootstrap_breadcrumbs %}
+{% load i18n markup bootstrap django_bootstrap_breadcrumbs %}
 
 
 {% block breadcrumbs %}
-	{{ block.super }}
-	{% breadcrumb_for "forum:index" %}{% trans "Forums" %}{% endbreadcrumb_for %}
-	{% breadcrumb_for "forum:forum" forum.slug forum.pk %}{{ forum.name }}{% endbreadcrumb_for %}
-	{% breadcrumb_for "forum:create-thread" forum.slug forum.pk %}{% trans "New thread" %}{% endbreadcrumb_for %}
+  {{ block.super }}
+  {% breadcrumb_for "forum:index" %}{% trans "Forums" %}{% endbreadcrumb_for %}
+  {% breadcrumb_for "forum:forum" forum.slug forum.pk %}{{ forum.name }}{% endbreadcrumb_for %}
+  {% breadcrumb_for "forum:create-thread" forum.slug forum.pk %}{% trans "New thread" %}{% endbreadcrumb_for %}
 {% endblock breadcrumbs %}
 
 {% block title %}{% trans "New thread" %} – {{ forum.name }}{% endblock %}
 
 {% block content %}
 
-	<h1>{% trans "Create a new thread" %} <small>{% blocktrans with name=forum.name %}in {{ name }}{% endblocktrans %}</small></h1>
-	<form class="form form-horizontal" method="POST">
-		{% csrf_token %}
-		{{ form|bootstrap_horizontal }}
-		<button type="submit" class="btn btn-primary">
-			<i class="fa fa-send"></i> {% trans "Create the new thread" %}
-		</button>
-	</form>
+  <h1>{% trans "Create a new thread" %}
+    <small>{% blocktrans with name=forum.name %}in {{ name }}{% endblocktrans %}</small>
+  </h1>
+  <form class="form form-horizontal" method="POST">
+    {% csrf_token %}
+    {{ form|bootstrap_horizontal }}
+    <div class="form-group"><div class="col-sm-10 col-lg-10 col-sm-offset-2 col-lg-offset-2">
+      <button type="submit" class="btn btn-primary"><i class="fa fa-send"></i> {% trans "Create the new thread" %}</button>
+      <button type="submit" class="btn btn-default" formaction="#preview" name="preview" value="1"><i class="fa fa-file-text"></i> {% trans "Preview" context "Preview, the action (button)" %}</button>
+    </div></div>
+  </form>
 
+  {% if preview %}
+    <h3 id="preview">{% trans "Preview" context "Preview, the noun (title)" %}</h3>
+    <div class="forum-post post-content tex2jax_process">{{ form.content.value|flavored_markdown }}</div>
+  {% endif %}
+
+{% endblock %}
+
+{% block extra_script %}
+  <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 {% endblock %}
