--- a/prologin/forum/templates/forum/edit_post.html
+++ b/prologin/forum/templates/forum/edit_post.html
@@ -3,27 +3,38 @@
 
 
 {% block breadcrumbs %}
-	{{ block.super }}
-	{% breadcrumb_for "forum:index" %}{% trans "Forums" %}{% endbreadcrumb_for %}
-	{% breadcrumb_for "forum:forum" forum.slug forum.pk %}{{ forum.name }}{% endbreadcrumb_for %}
-	{% breadcrumb_for "forum:thread" forum.slug forum.pk thread.slug thread.pk %}{{ thread.title }}{% endbreadcrumb_for %}
-	{% breadcrumb_for "forum:edit-post" thread.slug post.pk %}{% trans "Edit" %}{% endbreadcrumb_for %}
+  {{ block.super }}
+  {% breadcrumb_for "forum:index" %}{% trans "Forums" %}{% endbreadcrumb_for %}
+  {% breadcrumb_for "forum:forum" forum.slug forum.pk %}{{ forum.name }}{% endbreadcrumb_for %}
+  {% breadcrumb_for "forum:thread" forum.slug forum.pk thread.slug thread.pk %}{{ thread.title }}{% endbreadcrumb_for %}
+  {% breadcrumb_for "forum:edit-post" thread.slug post.pk %}{% trans "Edit" %}{% endbreadcrumb_for %}
 {% endblock breadcrumbs %}
 
 {% block extra_head %}
-	<link rel="stylesheet" type="text/css" href="{% static 'lib/css/pygments-monokai.css' %}" media="screen"/>
-	{{ block.super }}
+  <link rel="stylesheet" type="text/css" href="{% static 'lib/css/pygments-monokai.css' %}" media="screen"/>
+  {{ block.super }}
 {% endblock %}
 
 {% block title %}{% trans "Edit post" %} – {{ thread.title }}{% endblock %}
 
 {% block content %}
-	<h1>{% trans "Edit post" %} <small>{% blocktrans with title=thread.title %}in {{ title }}{% endblocktrans %}</small></h1>
+  <h1>{% trans "Edit post" %}
+    <small>{% blocktrans with title=thread.title %}in {{ title }}{% endblocktrans %}</small>
+  </h1>
 
-	<form method="POST">
-		{% csrf_token %}
-		{{ form|bootstrap }}
-		<button type="submit" class="btn btn-primary"><i class="fa fa-send"></i> {% trans "Save changes" %}</button>
-	</form>
+  <form method="POST">
+    {% csrf_token %}
+    {{ form|bootstrap }}
+    <button type="submit" class="btn btn-primary"><i class="fa fa-send"></i> {% trans "Save changes" %}</button>
+    <button type="submit" class="btn btn-default" formaction="#preview" name="preview" value="1"><i class="fa fa-file-text"></i> {% trans "Preview" context "Preview, the action (button)" %}</button>
+  </form>
+  {% if preview %}
+    <h3 id="preview">{% trans "Preview" context "Preview, the noun (title)" %}</h3>
+    <div class="forum-post post-content tex2jax_process">{{ form.content.value|flavored_markdown }}</div>
+  {% endif %}
 
+{% endblock %}
+
+{% block extra_script %}
+  <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 {% endblock %}
