--- a/prologin/team/templates/team/index.html
+++ b/prologin/team/templates/team/index.html
@@ -27,7 +27,7 @@
   <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
     <div class="media team-member" id="m{{ member.user.pk }}">
       <div class="media-left">
-        <a href="{% url 'users:profile' member.user.pk %}" class="team-member-avatar" style="{% if member.user.picture_or_avatar %}background-image: url('{{ member.user.picture_or_avatar.url }}'){% endif %}" /></a>
+        <a href="{% url 'users:profile' member.user.pk %}" class="team-member-avatar" style="{% if member.user.picture_or_avatar %}background-image: url('{{ member.user.picture_or_avatar.url }}'){% endif %}">{% trans "Picture" %}</a>
       </div>
       <div class="media-body">
         <h4 class="media-heading">
