forum: fix minor HTML syntax error

--- a/prologin/forum/templates/forum/index.html
+++ b/prologin/forum/templates/forum/index.html
@@ -21,7 +21,7 @@
 					<div class="col-xs-7">
 						<a href="{{ forum.get_absolute_url }}">
 						<h3>{{ forum.name }}</h3>
-						<span class="text-muted forum-meta">{{ forum.description|markdown }}</span>
+						<div class="text-muted forum-meta">{{ forum.description|markdown }}</div>
 						</a>
 					</div>
 					<div class="col-sm-2 hidden-xs forum-meta text-center">
