--- a/prologin/team/templates/team/index.html
+++ b/prologin/team/templates/team/index.html
@@ -5,7 +5,7 @@
 {% block breadcrumbs %}
   {{ block.super }}
   {% breadcrumb_for "pages:about-organization" %}{% trans "The organization" %}{% endbreadcrumb_for %}
-  {% breadcrumb_for "" %}{% trans "Teams" %}{% endbreadcrumb_for %}
+  {% breadcrumb_for "team:index" %}{% trans "Teams" %}{% endbreadcrumb_for %}
   {% breadcrumb year "team:year" year %}
 {% endblock breadcrumbs %}
 
