train: remove breadcrumbs to the same page

--- a/prologin/problems/templates/problems/challenge-scoreboard.html
+++ b/prologin/problems/templates/problems/challenge-scoreboard.html
@@ -4,8 +4,7 @@
 {% block breadcrumbs %}
   {{ block.super }}
   {% breadcrumb_for "training:index" %}{% trans "Training" %}{% endbreadcrumb_for %}
-  {% breadcrumb challenge.year "" %}
-  {% breadcrumb challenge.event_type|choiceenum_label "training:challenge" challenge.year challenge.event_type.name %}
+  {% breadcrumb_for "training:challenge" challenge.year challenge.event_type.name %}{{ challenge.event_type|choiceenum_label }} {{ challenge.year }}{% endbreadcrumb_for %}
   {% breadcrumb_for "training:challenge-scoreboard" challenge.year challenge.event_type.name %}{% trans "Scoreboard" %}{% endbreadcrumb_for %}
 {% endblock breadcrumbs %}
 
