--- a/prologin/problems/templates/problems/search_results.html
+++ b/prologin/problems/templates/problems/search_results.html
@@ -16,6 +16,15 @@
   <p class="visible-xs"><a href="#problems"><i class="fa fa-angle-double-down"></i> {% trans "Jump to results" %}</a></p>
   {% include "problems/stub_search_form.html" %}
 
+  <p class="search-sorts">
+    {% trans "Sort" %}
+    <a href="{% qurl request.get_full_path sort='title' %}">{% trans "by title" %}</a> ⋅
+    <a href="{% qurl request.get_full_path sort='year' %}">{% trans "by year" %}</a> ⋅
+    <a href="{% qurl request.get_full_path sort='difficulty' %}">{% trans "by difficulty" %}</a>,
+    <a href="{% qurl request.get_full_path order='asc' %}">{% trans "ascending" %}</a> or
+    <a href="{% qurl request.get_full_path order='desc' %}">{% trans "descending" %}</a>
+  </p>
+
   <div class="list-group" id="problems">
     <div class="list-group-item list-group-item-info">
       {% blocktrans with page_obj.paginator.count as count and page_obj.start_index as from and page_obj.end_index as to %}Problems {{ from }}-{{ to }} of {{ count }}{% endblocktrans %}
